gccida/g1/gen_call
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_call/src/insn-emit.c:14701:50: error: use of undeclared identifier 'machine_mode'
if ( !call_insn_operand( operand0->fld[0].rtx, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)) ) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_call/src/insn-emit.c:14703:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_call/src/obj/insn-emit.o] Error 1
